<resources>
    <string name="app_name">Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="discard">Discard</string>
    <string name="no_contact_saved">No contact saved.</string>

    <string name="delete_alert">Are you sure you want to delete this contact?</string>
    <string name="discard_alert">Save your changes or discard them?</string>
    <string name="save_alert">Please input a value in the fields.</string>
    <string name="email_alert">Please input valid email.</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone (e.g. +63XXXXXXXXXX)</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="first_launch_setup">First Launch Setup</string>
    <string name="first_launch_setup_msg">Would you like to use data encryption?</string>
    <string name="encryption_on">Encryption: ON</string>
    <string name="encryption_off">Encryption: OFF</string>
</resources>